# ray-tracing

./: .gitignore  CMakeLists.txt  all.sh  build.sh  run.sh
includes/: AABB.h  BVH.h  Image.h  RandomGenerator.h  Scene.h  algebraUtils.h  geometryUtils.hpp  ioUtils.hpp  parse.h  simpleStructs.h
includes/Distributions/: BoxUniform.h  Cosine.h  Distribution.h  EllipsoidDistribution.h  MixDistribution.h  TriangleDistribution.h
includes/Light/: DirectionalLight.h  Light.h  PointLight.h
includes/Object/: Box.h  Ellipsoid.h  Object.h  Plane.h  Triangle.h
src/: AABB.cpp  BVH.cpp  Image.cpp  RandomGenerator.cpp  Scene.cpp  algebraUtils.cpp  main.cpp  parse.cpp
src/Distributions/: BoxUniform.cpp  Cosine.cpp  Distribution.cpp  EllipsoidDistribution.cpp  MixDistribution.cpp  TriangleDistribution.cpp
src/Light/: DirectionalLight.cpp  Light.cpp  PointLight.cpp
src/Object/: Box.cpp  Ellipsoid.cpp  Object.cpp  Plane.cpp  Triangle.cpp
